# karhu

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  testio.yml
data/: README.md
docs/: contribution.md  index.md  release_notes.md
example/: run_inference.ipynb
model/: model.pt
model/diii-d/: model.pt  model_config.json  scaling_params.json
model/jet_2H/: model.pt  model_config.json  scaling_params.json
src/: run.py
src/karhu/: __init__.py  common.py  logger_config.py  models.py  utils_eqdsk.py  utils_helena.py  utils_input.py
src/karhu/cli/: inference_from_helena.py
src/karhu/models/: __init__.py  gmax.py
tests/: test_cli.py  test_inference_eqdsk.py  test_inference_helena.py  test_loadmodel.py  test_normalisation_and_inference_eqdsk.py
tests/data/eqdsk/: DIIID_EXAMPLE.eqdsk
tests/data/helena/DIIID_EXAMPLE/: EQDSK  fort.10  fort.20  fort.27  fort.30  fort.41  fort.51  helena_bnd
tests/data/helena/JET/: EQDSK  fort.10  fort.20  fort.27  fort.30  fort.41  fort.51  helena_bnd
tests/data/helena/MASTU_EXAMPLE/: EQDSK  density  fort.10  fort.20  fort.27  fort.30  fort.41  fort.51  helena_bnd
tests/data/helena_jet/: fort.10  fort.20
