[project]
name = "KARHU"
version = "0.1.1"
requires-python = ">=3.7"
dependencies = [
    "f90nml",
    "numpy",
    "pytest",
    "scipy",
    "torch",
]

authors = [ {name="Amanda Bruncona", email="amanda.bruncona@vtt.fi"}, {name="Adam Kit", email="adam.kit@vtt.fi"}]

[build-system]
requires = [
  "setuptools>=64,<70",
  "wheel"
]
build-backend = "setuptools.build_meta"


[tool.setuptools]
# We want setuptools to treat `src` as the root for packages
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# This replicates `find_packages(where="src")`
where = ["src"]

