[project]
name = "karhu"
version = "0.1.1"
requires-python = ">=3.8"
dependencies = [
    "f90nml",
    "numpy",
    "scipy",
    "torch",
]

authors = [ {name="Amanda Bruncona", email="amanda.bruncona@vtt.fi"}, {name="Adam Kit", email="adam.kit@vtt.fi"}]

[dependency-groups]
dev = [
  "pytest", 
  "freeqdsk"
]

# optional dependency groups (pip install .[dev])
[project.optional-dependencies]
dev = [
    "pytest",
    "freeqdsk",
]

[build-system]
requires = [
  "setuptools>=64,<70",
  "wheel"
]
build-backend = "setuptools.build_meta"


[tool.setuptools]
# We want setuptools to treat `src` as the root for packages
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# This replicates `find_packages(where="src")`
where = ["src"]

